k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-web
  namespace: default
  labels:
    app: transmission-web
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: transmission-web
